force-app/main/default/objects/ReverseSSPViewMapping__mdt/ReverseSSPViewMapping__mdt.object-meta.xml
<CustomObject>
    <description>Object required to identify the views for various flows (Intake, RAC) with the associated screens adn their execution sequence</description>
    <label>RSSP DC View Mapping</label>
    <pluralLabel>RSSP DC View Mappings</pluralLabel>
</CustomObject>