force-app/main/default/objects/ReverseSSPViewMapping__mdt/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <description>Describes type of flow (Intake/RAC)</description>
    <label>Flow</label>
    <length>10</length>
    <type>Text</type>
</CustomField>