force-app/main/default/objects/ReverseSSPViewMapping__mdt/fields/Intake_Order__c.field-meta.xml
<CustomField>
    <fullName>Intake_Order__c</fullName>
    <description>Order Sequence of Intake Flow</description>
    <label>Intake Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>