force-app/main/default/objects/ReverseSSPViewMapping__mdt/fields/Is_Intake__c.field-meta.xml
<CustomField>
    <fullName>Is_Intake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Intake</label>
    <type>Checkbox</type>
</CustomField>