force-app/main/default/objects/ReverseSSPViewMapping__mdt/fields/Is_RAC__c.field-meta.xml
<CustomField>
    <fullName>Is_RAC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is RAC</label>
    <type>Checkbox</type>
</CustomField>