force-app/main/default/objects/ReverseSSPViewMapping__mdt/fields/Is_sequential__c.field-meta.xml
<CustomField>
    <fullName>Is_sequential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is sequential</label>
    <type>Checkbox</type>
</CustomField>