force-app/main/default/objects/ReverseSSPViewMapping__mdt/fields/RAC_Order__c.field-meta.xml
<CustomField>
    <fullName>RAC_Order__c</fullName>
    <description>Contains Order sequence of RAC flow</description>
    <label>RAC Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>