force-app/main/default/objects/ReverseSSPViewMapping__mdt/fields/Screens__c.field-meta.xml
<CustomField>
    <fullName>Screens__c</fullName>
    <description>Contains semi-colon separated unique screen Ids for the given view</description>
    <label>Screens</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>