force-app/main/default/objects/ReverseSSPViewMapping__mdt/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <description>Contains Name of the view for RSSP-DC</description>
    <label>View</label>
    <length>50</length>
    <type>Text</type>
</CustomField>