force-app/main/default/objects/ReverseSSPViewMapping__mdt/listViews/All_Values1.listView-meta.xml
<ListView>
    <fullName>All_Values1</fullName>
    <columns>View__c</columns>
    <columns>Is_Intake__c</columns>
    <columns>Intake_Order__c</columns>
    <columns>Is_RAC__c</columns>
    <columns>RAC_Order__c</columns>
    <columns>Screens__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
    <language>en_US</language>
</ListView>